# src/controllers/customer.controller.ts
@@ -1,14 +1,14 @@
-import { Post, Route, SuccessResponse, Controller, Body, Get } from 'tsoa'
-import { injectable } from 'tsyringe'
-import { CustomerDto, CustomerList } from '../models/customer'
-import { CustomerListDto } from '../models/customer/customer.dto'
-import { CustomerService } from '../services/customer'
+import { Post, Route, SuccessResponse, Controller, Body, Get } from 'tsoa';
+import { injectable } from 'tsyringe';
+import { CustomerDto, CustomerList } from '../models/customer';
+import { CustomerListDto } from '../models/customer/customer.dto';
+import { CustomerService } from '../services/customer';
 
 @injectable()
 @Route('customer')
 export default class CustomerController extends Controller {
     constructor(private customerService: CustomerService) {
-        super()
+        super();
     }
 
     @SuccessResponse(201, 'Created')
@@ -16,19 +16,15 @@ export default class CustomerController extends Controller {
     public async addCustomer(
         @Body() customerRequest: CustomerDto
     ): Promise<void> {
-        if (!customerRequest.name || !customerRequest.address) {
-            throw new Error('Name or address missing!')
-        }
-
         try {
-            await this.customerService.createCustomer(customerRequest)
+            await this.customerService.createCustomer(customerRequest);
         } catch (error: unknown) {
-            throw new Error((error as { message: string }).message)
+            throw new Error((error as { message: string }).message);
         }
     }
 
     @Get('/list')
     public async getCustomerList(): Promise<CustomerListDto> {
-        return await this.customerService.getListOfCustomer()
+        return await this.customerService.getListOfCustomer();
     }
 }
