# src/models/purchase/purchase.dto.ts
@@ -1,11 +1,7 @@
-import { IsNotEmpty, MaxLength } from 'class-validator';
 import { Product } from '../product';
-import { Purchase, PurchasePerCustomerProduct } from './purchase';
+import { PurchasePerCustomerProduct } from './purchase';
 
 export class PurchaseDto {
-    @MaxLength(500, {
-        message: 'CustomerName is too long',
-    })
     customerName!: String;
     products!: Omit<Product, 'unit_price'>[];
 }
